# Websocket-Cpp

./: CMakeLists.txt  LICENSE  Makefile  README.md
include/: output.hpp  root_certificates.hpp  web_socket_session.hpp
src/: main.cpp
